--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Landing page Activ Cleaning Solutions cu backend pentru formular de contact",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npm rebuild sqlite3 --build-from-source"
   },
   "keywords": [
     "activ-cleaning",
