--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ SMTP_USER=no-reply@activcleaning.ro
 SMTP_PASS=schimba-cu-parola-reala
 SMTP_ENABLED=true
 SMTP_SKIP_VERIFY=false
+EMAIL_PROVIDER=smtp # sau brevo_api
+BREVO_API_KEY=cheia-brevo
+BREVO_SENDER_EMAIL=no-reply@activcleaning.ro
+BREVO_SENDER_NAME=Activ Cleaning Solutions
 RATE_LIMIT_MAX=10
 RETENTION_DAYS=730
 GDPR_REQUEST_RETENTION_DAYS=365
